<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/tabhost"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TabWidget android:id="@android:id/tabs"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		/>
		<FrameLayout android:id="@android:id/tabcontent"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:id="@+id/enctab">	
				<LinearLayout
				  	android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView
					    android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/enc_yuv_promote"
					/>				    														    		
					<EditText 
					    android:id="@+id/encyuvfilename"
					    android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/enc_yuv_file"
					/>
				</LinearLayout>
				<LinearLayout
				  	android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView
					    android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/enc_avc_promote"
					/>				
					<EditText 
					    android:id="@+id/encedavcfilename"
					    android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/enc_avc_file"
					/>
				</LinearLayout>	
				
				
				<FrameLayout 
					android:layout_gravity="center_horizontal"
					android:layout_width="320px"
					android:layout_height="240px">				
					<yzriver.avc.avccodec.GraphicsView 
					    android:id="@+id/GraphicsViewenc"
					    android:layout_gravity="center_horizontal"
						android:layout_width="fill_parent"
						android:layout_height="fill_parent"				
					/>
				</FrameLayout>														
				<LinearLayout
				  	android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">														
				    <Button android:text="@string/encode_button" 
					    android:layout_width="fill_parent" 
					    android:layout_height="fill_parent"
					    android:layout_weight="50"			     
					    android:id="@+id/button_encode">
				    </Button>
				    <Button android:text="@string/encode_stop_button" 
					    android:layout_width="fill_parent" 
					    android:layout_height="fill_parent"
					    android:layout_weight="50"
					    android:id="@+id/button_encode_stop">
				    </Button>				    
				</LinearLayout>
			</LinearLayout>
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:id="@+id/dectab">	
				<LinearLayout
				  	android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView
					    android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/dec_avc_promote"
					/>				    														    		
					<EditText 
					    android:id="@+id/decavcfilename"
					    android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/dec_avc_file"
					/>
				</LinearLayout>
				<LinearLayout
				  	android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView
					    android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/dec_yuv_promote"
					/>				
					<EditText 
					    android:id="@+id/decyuvfilename"
					    android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/dec_yuv_file"
					/>
				</LinearLayout>	
				<yzriver.avc.avccodec.GraphicsView 
				    android:id="@+id/GraphicsViewdec"
				    android:layout_gravity="center_horizontal"
					android:layout_width="320px"
					android:layout_height="240px"				
				/>
				<LinearLayout
				  	android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">														
				    <Button android:text="@string/decode_button" 
					    android:layout_width="fill_parent" 
					    android:layout_height="fill_parent"
					    android:layout_weight="50"			     
					    android:id="@+id/button_decode">
				    </Button>
				    <Button android:text="@string/decode_stop_button" 
					    android:layout_width="fill_parent" 
					    android:layout_height="fill_parent"
					    android:layout_weight="50"			     
					    android:id="@+id/button_decode_stop">
				    </Button>				    
				</LinearLayout>				    															    
			</LinearLayout>
			

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:id="@+id/looptab"> 
				<LinearLayout
				  	android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView
					    android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/loop_avc_promote"
					/>				
					<EditText 
					    android:id="@+id/loopavcfilename"
					    android:layout_gravity="center_horizontal"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/loop_avc_file"
					/>
				</LinearLayout>	
			    			    
				<yzriver.avc.avccodec.VideoCameraView 
				    android:id="@+id/surfaceViewLoopEnc"				    
					android:layout_width="320px"
					android:layout_height="240px"				
				/>
				<yzriver.avc.avccodec.GraphicsView 
				    android:id="@+id/GraphicsViewLoopDec"				    
					android:layout_width="320px"
					android:layout_height="240px"				
				/>														
				<LinearLayout
				  	android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">														
				    <Button android:text="@string/loop_start_button" 
					    android:layout_width="fill_parent" 
					    android:layout_height="fill_parent"
					    android:layout_weight="50"			     
					    android:id="@+id/loop_start_button">
				    </Button>
				    <Button android:text="@string/loop_stop_button" 
					    android:layout_width="fill_parent" 
					    android:layout_height="fill_parent"
					    android:layout_weight="50"
					    android:id="@+id/loop_stop_button">
				    </Button>				    
				</LinearLayout>
			</LinearLayout>
			
		</FrameLayout>
	</LinearLayout>
</TabHost>
