<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<Gallery  
    	android:id="@+id/gallery"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"    	
	/>	
	<LinearLayout 
    	android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="center_horizontal">
	    <Button android:text="@string/gallery_avc_rec" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:visibility="invisible"	    
		    android:id="@+id/button_avc_rec">
	    </Button>
	    <Button android:text="@string/gallery_list_avc" 
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:visibility="invisible"	    
		    android:id="@+id/button_list_avc">
	    </Button>	    
	    <Button android:text="@string/gallery_start_loop"	        
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:visibility="invisible"	    
		    android:id="@+id/button_start_loop">
	    </Button>	    
	    <Button android:text="@string/gallery_start_avccodecDemo"	        
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:visibility="invisible"	    
		    android:id="@+id/button_start_separate">
	    </Button>	    	    	    
	</LinearLayout>        
</FrameLayout>
