<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		<FrameLayout 
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:layout_weight="44">				    
			<yzriver.avc.avccodec.VideoCameraView 
			    android:id="@+id/lsurfaceViewLoopEnc"				    
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
			/>
			<TextView
				android:orientation="horizontal"
				android:layout_width="fill_parent"		
				android:layout_height="fill_parent"
				android:paddingLeft="20dp"
				android:paddingTop="20dp"								
			    android:id="@+id/previewFramerate"/>
		</FrameLayout>		
		<FrameLayout
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:layout_weight="44">				    
			<yzriver.avc.avccodec.GraphicsView 
			    android:id="@+id/lGraphicsViewLoopDec"				    
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"								
			/>
			<TextView
				android:orientation="horizontal"
				android:layout_width="fill_parent"		
				android:layout_height="fill_parent"
				android:paddingLeft="20dp"
				android:paddingTop="20dp"								
			    android:id="@+id/loopReport"/>
		</FrameLayout>																
		<LinearLayout
		  	android:orientation="vertical"
			android:layout_width="0px"
			android:layout_height="fill_parent"
			android:layout_weight="12">														
		    <Button android:text="@string/loop_start_button" 
			    android:layout_width="fill_parent" 
			    android:layout_height="0px"
			    android:layout_weight="33"			     
			    android:id="@+id/lloop_start_button">
		    </Button>
		    <Button android:text="@string/loop_stop_button" 
			    android:layout_width="fill_parent" 
			    android:layout_height="0px"
			    android:layout_weight="33"
			    android:id="@+id/lloop_stop_button">
		    </Button>
		    <Button android:text="@string/loop_report_button" 
			    android:layout_width="fill_parent" 
			    android:layout_height="0px"
			    android:layout_weight="34"
			    android:visibility="invisible"
			    android:id="@+id/lloop_report_button">
		    </Button>		    				    
		</LinearLayout>
	</LinearLayout>
</FrameLayout>	